# Unity-Segmentation

./: README.md
segmentation_ros/: CMakeLists.txt  original.pcd  package.xml  pc.pcd  pc_finale.pcd
segmentation_ros/src/: CalculateBoundingBox.cpp  cloudCompare.cpp  euclideanSegmentation.cpp  ransac.cpp  read_labels.cpp  regionGrowing.cpp  ros_segmentation_node.cpp
